# stunning-encrypto

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  encrypto.js  encrypto.min.js  package-lock.json  package.json  pom.xml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake  (+1 more)
ios/: encrypto_flutter.podspec
ios/Classes/: EncryptoFlutterPlugin.h  EncryptoFlutterPlugin.m  SwiftEncryptoFlutterPlugin.swift
lib/: LocalFileEncryption.dart  encrypto_flutter.dart  encrypto_flutter_method_channel.dart  encrypto_flutter_platform_interface.dart  encrypto_flutter_web.dart  encryptospi.dart  keypair.dart  primegen.dart  zot_private_key.dart  zot_public_key.dart
lib/bitcount/: bitcount.dart  js.dart  native.dart
linux/: CMakeLists.txt  encrypto_flutter_plugin.cc
macos/: encrypto_flutter.podspec
macos/Classes/: EncryptoFlutterPlugin.swift
src/: bigint.rs  lib.rs  main.rs
test/: encrypto_flutter_method_channel_test.dart  encrypto_flutter_test.dart  try.dart
windows/: CMakeLists.txt  encrypto_flutter_plugin.cpp  encrypto_flutter_plugin.h  encrypto_flutter_plugin_c_api.cpp
(+19 files in other folders)
