[package]
name = "encrypto_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rsa = "0.6.1"
rand = "0.8.5"
num-traits = "0.2.15"
num = { version = "0.4.0", default-features = false }
num-integer = "0.1.45"
num-bigint = { version = "0.4.3", features = ["rand", "serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = {version = "1.0.87"}
base64 = "0.13.1"
